Update BQ request columns

--- a/debug/bq-tileset/editor-compare.html
+++ b/debug/bq-tileset/editor-compare.html
@@ -69,12 +69,12 @@
                     <div class="form-group">
                         <label for="dataset0">Dataset</label>
                         <input type="text" class="form-control" id="dataset0" placeholder="Enter dataset"
-                            value="carto_tilesets">
+                            value="rmr_tests">
                     </div>
                     <div class="form-group">
                         <label for="table">Table</label>
                         <input type="text" class="form-control" id="table0" placeholder="Enter table"
-                            value="nyc_collisions">
+                            value="new_mode24">
                     </div>
                     <div class="form-group">
                         <label for="token">Token</label>
@@ -106,12 +106,12 @@
                     <div class="form-group">
                         <label for="dataset1">Dataset</label>
                         <input type="text" class="form-control" id="dataset1" placeholder="Enter dataset"
-                            value="carto_tilesets">
+                            value="rmr_tests">
                     </div>
                     <div class="form-group">
                         <label for="table1">Table</label>
                         <input type="text" class="form-control" id="table1" placeholder="Enter table"
-                            value="nyc_collisions">
+                            value="new_mode24">
                     </div>
                     <div class="form-group">
                         <label for="token">Token</label>
