--- a/debug/bq-tileset/editor.html
+++ b/debug/bq-tileset/editor.html
@@ -57,12 +57,12 @@
                     <div class="form-group">
                         <label for="dataset">Dataset</label>
                         <input type="text" class="form-control" id="dataset" placeholder="Enter dataset"
-                            value="carto_tilesets">
+                            value="rmr_tests">
                     </div>
                     <div class="form-group">
                         <label for="table">Table</label>
                         <input type="text" class="form-control" id="table" placeholder="Enter table"
-                            value="nyc_collisions">
+                            value="new_mode24">
                     </div>
                     <div class="form-group">
                         <label for="token">Token</label>
