--- a/debug/bq-tileset/editor-compare.html
+++ b/debug/bq-tileset/editor-compare.html
@@ -111,7 +111,7 @@
                     <div class="form-group">
                         <label for="table1">Table</label>
                         <input type="text" class="form-control" id="table1" placeholder="Enter table"
-                            value="new_mode24">
+                            value="metadata_in_table_0">
                     </div>
                     <div class="form-group">
                         <label for="token">Token</label>
@@ -163,10 +163,10 @@
             styleElement.addEventListener('input', (event) => {
                 try {
                     styleElement.style.background = '';
-                    layers[index].update(source, new carto.Viz(event.target.value));
+                    layers[index].blendToViz(new carto.Viz(event.target.value));
                 } catch (error) {
                     styleElement.style.background = '#FFCDCD';
-                    console.warn(error.message);
+                    // console.warn(error.message);
                 }
             });
         }
