--- a/debug/bq-tileset/editor.html
+++ b/debug/bq-tileset/editor.html
@@ -4,8 +4,8 @@
 <head>
     <title>BigQuery Tileset Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="https://rawcdn.githack.com/CartoDB/carto-vl/bq-poc-0.6/dist/carto-vl.min.js"></script> -->
-    <script src="http://localhost:8080/dist/carto-vl.js"></script>
+    <script src="https://rawcdn.githack.com/CartoDB/carto-vl/bq-poc-0.7/dist/carto-vl.min.js"></script>
+    <!-- <script src="http://localhost:8080/dist/carto-vl.js"></script> -->
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
     <link rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css">
